frontend/test/should_fail/index_exec_node_countFromIndexFromTo_index_mismatch.grg
#using "index_exec_model.gm"

sequence s(j:int)
{
	{ i:int=countNodesFromIndexFrom(j, j) }
}